# az-local-pvc-master

./: .build.yml  .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yaml
hack/: build.sh  demo.sh  format.sh  setup_docker.sh
manifests/: kustomization.yaml  local-storage-consumer.yaml  local-storage-formatter.yaml  local-storage-provisioner.yaml  rbac.yaml  storage-class.yaml
src/: main.rs
