[package]
name = "az-local-pvc"
version = "0.0.1"
authors = ["Ace Eldeib <alexeldeib@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
crossbeam-channel = "0.4"
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.5.0"
slog-json = "2.3.0"
slog-atomic = "3.0.0"
clap = { git = "https://github.com/clap-rs/clap" }
anyhow = "1.0.28"
